
AC_PREREQ(2.61)
AC_INIT(barcodedriver, 0.2.02)
AC_CONFIG_SRCDIR([src/libloader.c])
AC_CONFIG_HEADER([config.h])

AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE

if test "x$host_cpu" != "x$target_cpu"; then
	CFLAGS="-march=$target_cpu $CFLAGS"
fi

MANUFACTURER_NAME="TSC"
#USER_INSTALL_PATH="/usr/local/share/$MANUFACTURER_NAME/printer"
USER_PPD_INSTALL_PATH="/usr/share/cups/model/$MANUFACTURER_NAME/"
USER_INSTALL_PATH="/opt/$MANUFACTURER_NAME/barcodedriver/bin"
AC_SUBST(MANUFACTURER_NAME)
AC_SUBST(USER_INSTALL_PATH)

dnl ********************************************************************************
dnl config args start
dnl ********************************************************************************
AC_ARG_WITH(debug,        [  --with-debug            compile in debug information (yes/no)],,with_debug=no)
AC_ARG_WITH(trial,        [  --with-trial            compile for trial version (yes/no)],,with_trial=no)

if test "x$with_debug" != "xno"; then
	CFLAGS="-g -D_DEBUG $CFLAGS"
fi

if test "x$with_trial" != "xno"; then
	CFLAGS="$CFLAGS -D__IS_TRIAL_VERSION__"
fi

FILTER_PROGRAMS="rastertobarcodetspl"
cupsFilter="application/vnd.cups-raster 0 rastertobarcodetspl"
BarCodeUtility="BarCodeUtility"
ResolutionAdd="/cupsBitsPerColor 1/cupsRowCount 8/cupsRowFeed 0/cupsRowStep 0/cupsColorSpace 3"

AC_SUBST(FILTER_PROGRAMS)
AC_SUBST(cupsFilter)
AC_SUBST(BarCodeUtility)
AC_SUBST(ResolutionAdd)

# Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

# Checks for libraries.
AC_CHECK_LIB([dl], [dlopen])
AC_CHECK_LIB([crypt], [crypt])

PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 2.0)
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h libintl.h locale.h netdb.h netinet/in.h stdlib.h string.h sys/socket.h sys/time.h unistd.h fcntl.h limits.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
# AC_TYPE_SSIZE_T
AC_FUNC_VPRINTF

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([getcwd memset strdup strncasecmp strcasecmp])

##########################################################
GZ_TARGET_DIR=barcodedriver-$PACKAGE_VERSION
GZ_TARGET_FILE=$GZ_TARGET_DIR-$target_cpu.tar.gz

AC_SUBST(GZ_TARGET_DIR)
AC_SUBST(GZ_TARGET_FILE)

FILES_PPD=""
FILES_PPD="$FILES_PPD ./ppd/TDP-245C.ppd"
FILES_PPD="$FILES_PPD ./ppd/TDP-245Plus.ppd"
FILES_PPD="$FILES_PPD ./ppd/TDP-247.ppd"
FILES_PPD="$FILES_PPD ./ppd/TTP-243EPro.ppd"
FILES_PPD="$FILES_PPD ./ppd/TTP-243Pro.ppd"
FILES_PPD="$FILES_PPD ./ppd/TTP-244CE.ppd"
FILES_PPD="$FILES_PPD ./ppd/TTP-244Plus.ppd"
FILES_PPD="$FILES_PPD ./ppd/TTP-245C.ppd"
FILES_PPD="$FILES_PPD ./ppd/TTP-245Plus.ppd"
FILES_PPD="$FILES_PPD ./ppd/TTP-246MPlus.ppd"
FILES_PPD="$FILES_PPD ./ppd/TTP-247.ppd"
FILES_PPD="$FILES_PPD ./ppd/TTP-342Pro.ppd"
FILES_PPD="$FILES_PPD ./ppd/TTP-343C.ppd"
FILES_PPD="$FILES_PPD ./ppd/TTP-343Plus.ppd"
FILES_PPD="$FILES_PPD ./ppd/TTP-344.ppd"
FILES_PPD="$FILES_PPD ./ppd/TTP-344C.ppd"
FILES_PPD="$FILES_PPD ./ppd/TTP-344MPlus.ppd"
FILES_PPD="$FILES_PPD ./ppd/TTP-346M.ppd"
FILES_PPD="$FILES_PPD ./ppd/TTP-384M.ppd"
FILES_PPD="$FILES_PPD ./ppd/TTP-644M.ppd"
FILES_PPD="$FILES_PPD ./ppd/TTP-2410M.ppd"
FILES_PPD="$FILES_PPD ./ppd/200dpi.ppd"
FILES_PPD="$FILES_PPD ./ppd/300dpi.ppd"
FILES_PPD="$FILES_PPD ./ppd/600dpi.ppd"
FILES_PPD="$FILES_PPD ./ppd/Alpha-2R.ppd"
FILES_PPD="$FILES_PPD ./ppd/Alpha-30L.ppd"
FILES_PPD="$FILES_PPD ./ppd/Alpha-3R.ppd"
FILES_PPD="$FILES_PPD ./ppd/Alpha-40L.ppd"
FILES_PPD="$FILES_PPD ./ppd/Alpha-4L-D-W.ppd"
FILES_PPD="$FILES_PPD ./ppd/Alpha-4L.ppd"
FILES_PPD="$FILES_PPD ./ppd/Alpha-4R.ppd"
FILES_PPD="$FILES_PPD ./ppd/Alpha-4R-W.ppd"
FILES_PPD="$FILES_PPD ./ppd/DA200.ppd"
FILES_PPD="$FILES_PPD ./ppd/DA210.ppd"
FILES_PPD="$FILES_PPD ./ppd/DA220.ppd"
FILES_PPD="$FILES_PPD ./ppd/DA300.ppd"
FILES_PPD="$FILES_PPD ./ppd/DA310.ppd"
FILES_PPD="$FILES_PPD ./ppd/DA320.ppd"
FILES_PPD="$FILES_PPD ./ppd/DC200.ppd"
FILES_PPD="$FILES_PPD ./ppd/DC200Pro.ppd"
FILES_PPD="$FILES_PPD ./ppd/DH220E.ppd"
FILES_PPD="$FILES_PPD ./ppd/DH220.ppd"
FILES_PPD="$FILES_PPD ./ppd/DH240.ppd"
FILES_PPD="$FILES_PPD ./ppd/DH320E.ppd"
FILES_PPD="$FILES_PPD ./ppd/DH320.ppd"
FILES_PPD="$FILES_PPD ./ppd/DH340.ppd"
FILES_PPD="$FILES_PPD ./ppd/DL240.ppd"
FILES_PPD="$FILES_PPD ./ppd/DL241.ppd"
FILES_PPD="$FILES_PPD ./ppd/E200.ppd"
FILES_PPD="$FILES_PPD ./ppd/E210.ppd"
FILES_PPD="$FILES_PPD ./ppd/E300.ppd"
FILES_PPD="$FILES_PPD ./ppd/E310.ppd"

##########################################################

AC_CONFIG_FILES([Makefile
				src/Makefile
				install-driver
				uninstall-driver
				ppd/TDP-245C.ppd
				ppd/TDP-245Plus.ppd
				ppd/TDP-247.ppd
				ppd/TTP-243EPro.ppd
				ppd/TTP-243Pro.ppd
				ppd/TTP-244CE.ppd
				ppd/TTP-244Plus.ppd
				ppd/TTP-245C.ppd
				ppd/TTP-245Plus.ppd
				ppd/TTP-246MPlus.ppd
				ppd/TTP-247.ppd
				ppd/TTP-342Pro.ppd
				ppd/TTP-343C.ppd
				ppd/TTP-343Plus.ppd
				ppd/TTP-344.ppd
				ppd/TTP-344C.ppd
				ppd/TTP-344MPlus.ppd
				ppd/TTP-346M.ppd
				ppd/TTP-384M.ppd
				ppd/TTP-644M.ppd
				ppd/200dpi.ppd
				ppd/300dpi.ppd
				ppd/600dpi.ppd
				ppd/Alpha-2R.ppd
				ppd/Alpha-30L.ppd
                ppd/Alpha-40L.ppd
                ppd/Alpha-4L-D-W.ppd
                ppd/Alpha-4L.ppd
                ppd/Alpha-4R.ppd
                ppd/Alpha-4R-W.ppd
                ppd/DA200.ppd
                ppd/DA210.ppd
                ppd/DA220.ppd
                ppd/DA300.ppd
                ppd/DA310.ppd
                ppd/DA320.ppd
                ppd/DC200.ppd
                ppd/DC200Pro.ppd
                ppd/DH220E.ppd
                ppd/DH220.ppd
                ppd/DH240.ppd
                ppd/DH320.ppd
                ppd/DH340.ppd
                ppd/DL240.ppd
                ppd/DL241.ppd
                ppd/E200.ppd
                ppd/E210.ppd
                ppd/E310.ppd
                
				])
AC_OUTPUT()

